Added link to demos and slides

--- a/index.html
+++ b/index.html
@@ -503,18 +503,25 @@ JobClient.runJob(jobConf);
         </section>
 
         <section>
-            <h2>Thanks/QA</h2>
+            <h2>Thanks</h2>
             <p>
             Peter Cook <br>
-            http://animateddata.co.uk/
+            <a href="http://animateddata.co.uk/">http://animateddata.co.uk</a>
             </p>
+            <small>
+            <a href="http://github.com/gustavonalle/query-infinispan-fosdem-slides">github.com/gustavonalle/query-infinispan-fosdem-slides</a><br>
+            <a href="http://github.com/gustavonalle/weather-demo/">github.com/gustavonalle/weather-demo</a><br>
+            <a href="http://github.com/gustavonalle/noaaparser/">github.com/gustavonalle/noaaparser</a><br>
+            <a href="http://github.com/gustavonalle/hadoop-demo/">github.com/gustavonalle/hadoop-demo</a>
+            </small>
         </section>
 
         <section>
             <h2>Thanks/QA</h2>
             infinispan.org<br>
             IRC #infinispan freenode<br>
-            github.com/infinispan
+            github.com/infinispan<br>
+           
         </section>
 
     </div>
